filterice-gui build fixes. added filterice-gui to installer

--- a/MFFilterICE.GUI/MFConfig.vcproj
+++ b/MFFilterICE.GUI/MFConfig.vcproj
@@ -68,18 +68,20 @@
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
 			ConfigurationType="1"
-			UseOfMFC="2"
+			UseOfMFC="1"
 			CharacterSet="2"
 			WholeProgramOptimization="TRUE">
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
-				InlineFunctionExpansion="1"
+				Optimization="1"
+				InlineFunctionExpansion="2"
+				FavorSizeOrSpeed="2"
 				OmitFramePointers="TRUE"
+				OptimizeForWindowsApplication="TRUE"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG"
 				StringPooling="TRUE"
 				MinimalRebuild="FALSE"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				BufferSecurityCheck="TRUE"
 				EnableFunctionLevelLinking="TRUE"
 				TreatWChar_tAsBuiltInType="TRUE"
@@ -93,8 +95,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="1"
-				GenerateDebugInformation="TRUE"
+				IgnoreDefaultLibraryNames=""
+				GenerateDebugInformation="FALSE"
 				SubSystem="2"
+				SwapRunFromCD="TRUE"
+				SwapRunFromNet="TRUE"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
