--- a/MFFilterICE.GUI/MFConfig.rc
+++ b/MFFilterICE.GUI/MFConfig.rc
@@ -106,7 +106,7 @@ BEGIN
     CONTROL         "Comma Seperated (CSV)",IDC_TYPE_CSV,"Button",
                     BS_AUTORADIOBUTTON | WS_DISABLED,30,90,164,8
     PUSHBUTTON      "...",IDC_SELECTPATH,240,32,14,13,WS_DISABLED
-    CONTROL         "MailFilter Rule Exchange File (BIN)",IDC_TYPE_BIN,
+    CONTROL         "MailFilter Binary Rule Package (BIN)",IDC_TYPE_BIN,
                     "Button",BS_AUTORADIOBUTTON,30,66,261,8
 END
 
@@ -128,7 +128,7 @@ BEGIN
                     IDC_IGNORENOTIFY,"Button",BS_AUTOCHECKBOX | WS_DISABLED | 
                     WS_TABSTOP,30,115,184,9
     PUSHBUTTON      "...",IDC_SELECTPATH,240,32,14,13,WS_DISABLED
-    CONTROL         "MailFilter Rule Exchange File (BIN)",IDC_TYPE_BIN,
+    CONTROL         "MailFilter Binary Rule Package (BIN)",IDC_TYPE_BIN,
                     "Button",BS_AUTORADIOBUTTON,30,66,261,8
 END
 
@@ -249,6 +249,9 @@ BEGIN
     END
     POPUP "&?"
     BEGIN
+        MENUITEM "&File documentation",         ID_HELP_TEXTFILEDOCUMENTATION
+
+        MENUITEM SEPARATOR
         MENUITEM "&About ...",                  ID_HELP_ABOUT
     END
 END
