--- a/MFFilterICE/main.rc
+++ b/MFFilterICE/main.rc
@@ -29,13 +29,13 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,2
+ FILEVERSION 1,50,0,0
  PRODUCTVERSION 1,5,8,0
- FILEFLAGSMASK 0x3fL
+ FILEFLAGSMASK 0x1fL
 #ifdef _DEBUG
- FILEFLAGS 0x21L
+ FILEFLAGS 0x1L
 #else
- FILEFLAGS 0x20L
+ FILEFLAGS 0x0L
 #endif
  FILEOS 0x4L
  FILETYPE 0x1L
@@ -46,14 +46,13 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "Christian Hofstädtler"
-            VALUE "FileDescription", "MailFilter professional FilterList Tool"
-            VALUE "FileVersion", "1.02"
+            VALUE "FileDescription", "MailFilter Rule Package Tool"
+            VALUE "FileVersion", "1.50"
             VALUE "InternalName", "MFFilterICE.exe"
             VALUE "LegalCopyright", "Copyright © 2000-2004 Christian Hofstädtler. All Rights Reserved."
             VALUE "OriginalFilename", "MFFilterICE.exe"
-            VALUE "ProductName", "MailFilter professional"
+            VALUE "ProductName", "MailFilter professional -- www.mailfilter.cc"
             VALUE "ProductVersion", "1.5.8"
-            VALUE "SpecialBuild", "Import and Export Utility for MailFilter FilterList files.  USE AT YOUR OWN RISK!"
         END
     END
     BLOCK "VarFileInfo"
