build 1140 move around template files for installer fix win32 tools (again)

--- a/MFFilterICE.GUI/FilterEdit.vcproj
+++ b/MFFilterICE.GUI/FilterEdit.vcproj
@@ -96,7 +96,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(ProjectDir)/../MailFilter/out/$(ProjectName).exe"
+				OutputFile="$(ProjectDir)../MailFilter/out/$(ProjectName).exe"
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="FALSE"
