--- a/MFFilterICE.GUI/MFConfig.rc
+++ b/MFFilterICE.GUI/MFConfig.rc
@@ -67,7 +67,8 @@ BEGIN
     EDITTEXT        IDC_FILTEREXPRESSION,72,30,246,12,ES_AUTOHSCROLL
     LTEXT           "Name:",IDC_STATIC,12,12,54,12
     LTEXT           "Expression:",IDC_STATIC,12,30,54,12
-    COMBOBOX        IDC_MATCHFIELD,72,48,132,12,CBS_DROPDOWN | WS_TABSTOP
+    COMBOBOX        IDC_MATCHFIELD,72,48,132,12,CBS_DROPDOWNLIST | 
+                    WS_TABSTOP
     LTEXT           "Field:",IDC_STATIC,12,48,54,12
     COMBOBOX        IDC_MATCHACTION,72,66,132,12,CBS_DROPDOWNLIST | 
                     WS_TABSTOP
